WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11343
REGRESSION (
r16975
): fast/events/objc-event-api is failing
https://bugs.webkit.org/show_bug.cgi?id=11343
Summary
REGRESSION (r16975): fast/events/objc-event-api is failing
Adam Roben (:aroben)
Reported
2006-10-18 01:18:25 PDT
fast/events/objc-event-api is failing on the buildbot
Attachments
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2006-10-18 01:23:14 PDT
According to the buildbot logs, this regression occurred somewhere between
r16972
and
r16977
, inclusive.
Adam Roben (:aroben)
Comment 2
2006-10-18 01:41:26 PDT
After some investigation, the guilty checkin is
r16795
.
Adam Roben (:aroben)
Comment 3
2006-10-18 02:00:19 PDT
Please excuse the typo in the last comment. The guilty revision is
r16975
Adele Peterson
Comment 4
2006-10-18 11:53:14 PDT
Committed revision 17111.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug