        Reviewed by Beth.

- Fixed http://bugs.webkit.org/show_bug.cgi?id=11343
          REGRESSION (r16975): fast/events/objc-event-api is failing

          When I moved the autoscroll code from FrameMac to Frame, I mistakingly changed the order of
          a call to invalidateClick.  This change moves it back to the sequence that existed before.  This allows
          the click count to get properly reset during a selection.

        * page/Frame.cpp: (WebCore::Frame::handleMouseMoveEvent):



Canonical link: https://commits.webkit.org/14379@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17111 268f45cc-cd09-0410-ab3c-d52691b4dbfc